--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>api-ajax lab1</title>
 </head>
 <body>
+    <label for="text">Search</label>
+    <input type="text" name="text" id="text" placeholder="reddit.com/r/...">
+
+    <button type="submit">Click to submit</button>
     <div></div>
     <script src="script.js"></script>
 </body>
